// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SessionExtension shows a guide to install the extension if no extension installed 1`] = `
<session-frame-stub>
  <div
    class="session"
  >
    <div
      class="session-container"
    >
      <h2
        class="session-title"
      >
        
        Use Lunie Browser extension
      
      </h2>
       
      <div
        class="session-main"
      >
        <p>
          
          Please install the Lunie Browser Extension from the
          
          <a
            href="https://chrome.google.com/webstore/category/extensions"
            rel="noopener norefferer"
            target="_blank"
          >
            Chrome Web Store
          </a>
          .
        
        </p>
      </div>
       
      <!---->
    </div>
  </div>
</session-frame-stub>
`;

exports[`SessionExtension shows an overview of all wallets to sign in with from the extension 1`] = `
<session-frame-stub>
  <div
    class="session"
  >
    <div
      class="session-container"
    >
      <h2
        class="session-title"
      >
        
        Use Lunie Browser extension
      
      </h2>
       
      <!---->
       
      <div
        class="session-main"
      >
        <div
          icon="laptop"
        >
          <div>
            
            Click below to open the Lunie Browser Extension, or use one of the
            existing address.
            
            <ul>
              <li>
                <div
                  class="extension-address-item"
                >
                  <div>
                    
                    TEST_WALLET
                    <br />
                     
                    <tmbtn-stub
                      color="primary"
                      type="anchor"
                      value="cosmos…1234"
                    />
                  </div>
                   
                  <div>
                    <tmbtn-stub
                      color="primary"
                      value="Use Address"
                    />
                  </div>
                </div>
              </li>
              <li>
                <div
                  class="extension-address-item"
                >
                  <div>
                    
                    TEST_WALLET_2
                    <br />
                     
                    <tmbtn-stub
                      color="primary"
                      type="anchor"
                      value="cosmos…5678"
                    />
                  </div>
                   
                  <div>
                    <tmbtn-stub
                      color="primary"
                      value="Use Address"
                    />
                  </div>
                </div>
              </li>
            </ul>
          </div>
        </div>
         
        <div
          class="session-footer"
        >
          <p
            class="ledger-install"
          >
            
            You can find the Lunie Browser Extension in the
            
            <a
              href="https://chrome.google.com/webstore/category/extensions"
              rel="noopener norefferer"
              target="_blank"
            >
              Chrome Web Store
            </a>
          </p>
        </div>
      </div>
    </div>
  </div>
</session-frame-stub>
`;
